add responsiveness changed headlining styles. add divs to add grey line over buy

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div id="product-2"><img src="assets/images/Dropfeeder.gif" alt="pdrop"></div>
         <div id="product-3"><img src="assets/images/string.gif" alt="pstring"></div>
         <div id="product-1-info">
-            <h3>pSPHEAR</h3>
+            <h3> pSPHEAR</h3>
             <p>Our most simple yet sophisticated system <br>
                 Perfect for shorter trips<br>
                 Fill the sphear with water and push the sharp edge 2-3" into the soil. <br>
@@ -105,7 +105,7 @@
             </p>
         </div>
         <div id="product-2-info">
-            <h3>pDROP</h3>
+            <h3> pDROP</h3>
             <p>System suitable for up to TEN plants. <br>
                 Simply fill the 10 liter bag with water <br>
                 Hang it slightly higher than the pots and put one of the tubes just a tad down into the soil.
@@ -119,7 +119,7 @@
 
         </div>
         <div id="product-3-info">
-            <h3>pSTRING</h3>
+            <h3> pSTRING</h3>
             <p> Have many small plants? <br>
                 This easy-to-use system is so easy it will blow your mind. <br>
                 Place the water container on the same level as the pots. <br>
@@ -134,6 +134,7 @@
             </p>
         </div>
         <div id="product-1-buy">
+            <div id="grey-top-line"></div>
             <div class="shop-button"><a href="#purchase">
                     <i class="fa-solid fa-cart-shopping"> 29.99€</i> <br>
                     <p>Add to cart</p>
@@ -141,6 +142,7 @@
             </div>
         </div>
         <div id="product-2-buy">
+            <div id="grey-top-line"></div>
             <div class="shop-button"><a href="#purchase">
                     <i class="fa-solid fa-cart-shopping"> 29.99€</i> <br>
                     <p>Add to cart</p>
@@ -149,6 +151,7 @@
         </div>
 
         <div id="product-3-buy">
+            <div id="grey-top-line"></div>
             <div class="shop-button"><a href="#purchase">
                     <i class="fa-solid fa-cart-shopping"> 29.99€</i> <br>
                     <p>Add to cart</p>
@@ -157,9 +160,8 @@
         </div>
     </section>
     <!-- quote -->
-    <div id="fun-quote-text">
-        <h2>"Keeping it simple"</h2>
-        <p>Come home to a green home no matter if you're gona a week or a month" </p>
+    <div id="fun-quote-text"><p>"Keeping it simple"
+        Come home to a green home no matter if you're gona a week or a month" </p>
     </div>
     <!-- about -->
     <section id="about">
@@ -206,6 +208,7 @@
     </section>
     <!-- purchase -->
     <section id="purchase">
+        <h2>Purchase</h2>
         <form aria-label="purchase-form" id="purchase-form" action="https://formsubmit.co/eric.aj.backman@gmail.com"
             method="post">
             <div id="your-info-container">
@@ -308,7 +311,7 @@
     </section>
     <!-- footer -->
     <footer id="footer-grid-container">
-        <div class="section-logo"> PLANTWAY INC </div>
+        <div class="section-logo"> <p id="footer-logo">PLANTWAY INC</p></div>
         <div id="section-opening-hours">
             <h3>Opening Hours</h3> Monday - Friday<br> 09:00-17:00<br> Saturday - Sunday <br> Closed
         </div>
@@ -320,7 +323,7 @@
             <p>Address: Ankarstocksvägen 13 <br> 168 64, Stockholm <br> Sweden</p>
         </div>
         <div id="section-social">
-            <p>Social Media</p>
+            <p id="social-media-footer">Social Media</p>
             <a href="http://www.facebook.com" target="_blank" aria-label="link to our facebook in new tab"><i
                     class="fa-brands fa-facebook"></i></a>
             <a href="http://www.twitter.com" target="_blank" aria-label="link to our twitter in new tab"><i
