--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
             </div>
         </div>
     </section>
+    <!-- about -->
     <section id="about">
         <h2>About us:</h2>
         <div id="about-grid-container">
