center align error fixed on about section and aded grey bottom to under 650px

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
                     <p>Add to cart</p>
                 </a>
             </div>
+            <div id="grey-bottom-line"></div>
         </div>
         <div id="product-2-buy">
             <div id="grey-top-line"></div>
@@ -148,6 +149,7 @@
                     <p>Add to cart</p>
                 </a>
             </div>
+            <div id="grey-bottom-line"></div>
         </div>
 
         <div id="product-3-buy">
@@ -157,6 +159,7 @@
                     <p>Add to cart</p>
                 </a>
             </div>
+            <div id="grey-bottom-line"></div>
         </div>
     </section>
     <!-- about -->
@@ -307,7 +310,9 @@
     </section>
     <!-- footer -->
     <footer id="footer-grid-container">
-        <div class="section-logo"> <p id="footer-logo">PLANTWAY INC</p></div>
+        <div class="section-logo">
+            <p id="footer-logo">PLANTWAY INC</p>
+        </div>
         <div id="section-opening-hours">
             <h3>Opening Hours</h3> Monday - Friday<br> 09:00-17:00<br> Saturday - Sunday <br> Closed
         </div>
