--- a/index.html
+++ b/index.html
@@ -134,32 +134,32 @@
             </p>
         </div>
         <div id="product-1-buy">
-            <div id="grey-top-line"></div>
+            <div class="grey-top-line"></div>
             <div class="shop-button"><a href="#purchase">
                     <i class="fa-solid fa-cart-shopping"> 29.99€</i> <br>
                     <p>Add to cart</p>
                 </a>
             </div>
-            <div id="grey-bottom-line"></div>
+            <div class="grey-bottom-line"></div>
         </div>
         <div id="product-2-buy">
-            <div id="grey-top-line"></div>
+            <div class="grey-top-line"></div>
             <div class="shop-button"><a href="#purchase">
                     <i class="fa-solid fa-cart-shopping"> 29.99€</i> <br>
                     <p>Add to cart</p>
                 </a>
             </div>
-            <div id="grey-bottom-line"></div>
+            <div class="grey-bottom-line"></div>
         </div>
 
         <div id="product-3-buy">
-            <div id="grey-top-line"></div>
+            <div class="grey-top-line"></div>
             <div class="shop-button"><a href="#purchase">
                     <i class="fa-solid fa-cart-shopping"> 29.99€</i> <br>
                     <p>Add to cart</p>
                 </a>
             </div>
-            <div id="grey-bottom-line"></div>
+            <div class="grey-bottom-line"></div>
         </div>
     </section>
     <!-- about -->
@@ -178,7 +178,7 @@
                 </p>
             </div>
             <div id="section-b">
-                <p>But if you're not there, how will they survive?
+                <p>But if you're not there, how will they survive?</p>
                 <ul id="options">
                     <li>You could ask someone to water them for you
                         <ul>
@@ -192,18 +192,19 @@
                         while
                         you don't have to worry about a thing</li>
                 </ul>
-                </p>
             </div>
             <div id="section-c">
-                Our patented products each have different advantages. Take a quick look and you will know. If it
-                takes
-                you more than three minutes, give us a call and we will help you with the right choice free of charge.
-                <br>
-                <br>
-                Good luck!
-                /Plantcation Crew
+                <p>Our patented products each have different advantages. Take a quick look and you will know. If it
+                    takes
+                    you more than three minutes, give us a call and we will help you with the right choice free of
+                    charge.
+                    <br>
+                    <br>
+                    Good luck!
+                    /Plantcation Crew
                 </p>
             </div>
+        </div>
     </section>
     <!-- purchase -->
     <section id="purchase">
@@ -333,6 +334,21 @@
                     class="fa-brands fa-instagram"></i></a>
         </div>
     </footer>
+    <p>
+        <a href="http://jigsaw.w3.org/css-validator/check/referer">
+            <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss"
+                alt="Valid CSS!" />
+        </a>
+    </p>
+
+    Valid CSS!
+    <p>
+        <a href="http://jigsaw.w3.org/css-validator/check/referer">
+            <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                alt="Valid CSS!" />
+        </a>
+    </p>
+
     <script src="https://kit.fontawesome.com/51932b41cf.js" crossorigin="anonymous"></script>
 </body>
 
