--- a/index.html
+++ b/index.html
@@ -78,13 +78,14 @@
                     <p> Keeping my plants alive while im not in my house used to be tricky. Thats why my goal is to
                         make your hunt for the perfect self-watering system easy so you can focus on the good things
                         in life. Choose your system below.</p>
-                    <div id="arrow-down"> <i class="fa-solid fa-arrow-down-long"> </i></div>
+
                 </div>
             </div>
         </div>
     </section>
     <!-- Products -->
     <section id="products-grid-container">
+        <div id="arrow-down"> <i class="fa-solid fa-arrow-down-long"> </i></div>
         <div class="section-logo">
             <h2>PRODUCTS</h2>
         </div>
@@ -333,22 +334,16 @@
             <a href="http://www.instagram.com" target="_blank" aria-label="link to our instagram in new tab"><i
                     class="fa-brands fa-instagram"></i></a>
         </div>
+        <div id="certificates">
+
+            <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss"
+                    alt="Valid CSS!"></a>
+            <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                    alt="Valid CSS!"></a>
+        </div>
     </footer>
-    <p>
-        <a href="http://jigsaw.w3.org/css-validator/check/referer">
-            <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss"
-                alt="Valid CSS!" />
-        </a>
-    </p>
-
-    Valid CSS!
-    <p>
-        <a href="http://jigsaw.w3.org/css-validator/check/referer">
-            <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
-                alt="Valid CSS!" />
-        </a>
-    </p>
-
     <script src="https://kit.fontawesome.com/51932b41cf.js" crossorigin="anonymous"></script>
 </body>
 
