changed name to plant A way instead of just plantway. makes more sense

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>PlantWay - Enjoy your plantcation</title>
+    <title>PlantaWay - Enjoy your plantcation!</title>
 </head>
 
 <body>
@@ -38,7 +38,7 @@
     <header id="header">
         <div id="logo-big">
             <a href="#top">
-                <h1>Plantway</h1>
+                <h1>Plantaway</h1>
                 <p>Watering Made Easy</p>
             </a>
         </div>
@@ -316,7 +316,7 @@
     <!-- footer -->
     <footer id="footer-grid-container">
         <div class="section-logo">
-            <p id="footer-logo">PLANTWAY INC</p>
+            <p id="footer-logo">PLANTAWAY INC</p>
         </div>
         <div id="section-opening-hours">
             <h3>Opening Hours</h3> Monday - Friday<br> 09:00-17:00<br> Saturday - Sunday <br> Closed
