final version 1.0. passed all tests and looks good on all screens

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <body>
     <!-- section only to go to top -->
-    <section id="top"></section>
+    <div id="top"></div>
     <!-- background fixed section -->
-    <section id="background-color"></section>
+    <div id="background-color"></div>
     <!-- intro animation -->
     <div id="welcome-animation-container">
         <div id="welcome-animation-upper-left">
@@ -33,7 +33,6 @@
             <h1>HOLA</h1>
         </div>
     </div>
-
     <!-- header -->
     <header id="header">
         <div id="logo-big">
@@ -75,10 +74,9 @@
                             id="text-red-presentation">traveling.</span>
                     </h2>
                     <hr>
-                    <p> Keeping my plants alive while im not in my house used to be tricky. Thats why my goal is to
-                        make your hunt for the perfect self-watering system easy so you can focus on the good things
-                        in life. Choose your system below.</p>
-
+                    <p> Keeping my plants alive while im not in my house used to be tricky. Thats why my goal is to make
+                        your hunt for the perfect self-watering system easy so you can focus on the good things in life.
+                        Choose your system below.</p>
                 </div>
             </div>
         </div>
@@ -94,44 +92,26 @@
         <div id="product-3"><img src="assets/images/string.gif" alt="pstring"></div>
         <div id="product-1-info">
             <h3> pSPHEAR</h3>
-            <p>Our most simple yet sophisticated system <br>
-                Perfect for shorter trips<br>
-                Fill the sphear with water and push the sharp edge 2-3" into the soil. <br>
-                Comes in pack of 4 pSphears <br>
-
+            <p>Our most simple yet sophisticated system <br> Perfect for shorter trips<br> Fill the sphear with water
+                and push the sharp edge 2-3" into the soil. <br> Comes in pack of 4 pSphears <br>
                 <br>
-                <br>
-                Capacity:<br>
-                Up to 7 days
+                <br> Capacity:<br> Up to 7 days
             </p>
         </div>
         <div id="product-2-info">
             <h3> pDROP</h3>
-            <p>System suitable for up to TEN plants. <br>
-                Simply fill the 10 liter bag with water <br>
-                Hang it slightly higher than the pots and put one of the tubes just a tad down into the soil.
-                10 tubes - 10 plants
-
-                <br>
-                <br>
-                Capacity:<br>
-                Up to 20 days
+            <p>System suitable for up to TEN plants. <br> Simply fill the 10 liter bag with water <br> Hang it slightly
+                higher than the pots and put one of the tubes just a tad down into the soil. 10 tubes - 10 plants <br>
+                <br> Capacity:<br> Up to 20 days
             </p>
-
         </div>
         <div id="product-3-info">
             <h3> pSTRING</h3>
-            <p> Have many small plants? <br>
-                This easy-to-use system is so easy it will blow your mind. <br>
-                Place the water container on the same level as the pots. <br>
-                Put one end of the specially designed strings in the container and the other 2-3" into the soil
-                using the digger (included) <br>
-                The string will lead the water to the plant as the soil dries.
-                <br>
-                <br>
-                Capacity:<br>
-                Up to 14 days <br>
-                30 days with a larger container
+            <p> Have many small plants? <br> This easy-to-use system is so easy it will blow your mind. <br> Place the
+                water container on the same level as the pots. <br> Put one end of the specially designed strings in the
+                container and the other 2-3" into the soil using the digger (included) <br> The string will lead the
+                water to the plant as the soil dries. <br>
+                <br> Capacity:<br> Up to 14 days <br> 30 days with a larger container
             </p>
         </div>
         <div id="product-1-buy">
@@ -152,7 +132,6 @@
             </div>
             <div class="grey-bottom-line"></div>
         </div>
-
         <div id="product-3-buy">
             <div class="grey-top-line"></div>
             <div class="shop-button"><a href="#purchase">
@@ -169,40 +148,29 @@
         <div id="about-grid-container">
             <div id="section-a">
                 <p>We think going away on vacation is a wonderful time. For many of us that is when we create our best
-                    memories
-                    of our lives. Coming home to a sea of dead plants is one of the worst.
-                    <br>
-                    Plants are awesome. Even the most urban city slickers can appreciate the shades
-                    of green, the sense of life and the clean air they bring. They give us a lot and the only thing they
-                    want in return is a little water and sunlight. Well, a little more at times but that's basically
-                    it.
-                </p>
+                    memories of our lives. Coming home to a sea of dead plants is one of the worst. <br> Plants are
+                    awesome. Even the most urban city slickers can appreciate the shades of green, the sense of life and
+                    the clean air they bring. They give us a lot and the only thing they want in return is a little
+                    water and sunlight. Well, a little more at times but that's basically it. </p>
             </div>
             <div id="section-b">
                 <p>But if you're not there, how will they survive?</p>
                 <ul id="options">
-                    <li>You could ask someone to water them for you
-                        <ul>
+                    <li>You could ask someone to water them for you <ul>
                             <li>They might not show up?</li>
                             <li>Can you trust them with a key?</li>
                             <li>They might water too much and kill your plants</li>
                         </ul>
                     </li>
                     <li> OR you could find the RIGHT watering system for your needs and be sure your plants get what
-                        they need
-                        while
-                        you don't have to worry about a thing</li>
+                        they need while you don't have to worry about a thing</li>
                 </ul>
             </div>
             <div id="section-c">
                 <p>Our patented products each have different advantages. Take a quick look and you will know. If it
-                    takes
-                    you more than three minutes, give us a call or send us an e-mail and we will help you with the choice free of
-                    charge.
-                    <br>
-                    <br>
-                    Good luck!
-                    /Plantcation Crew
+                    takes you more than three minutes, give us a call or send us an e-mail and we will help you with the
+                    choice free of charge. <br>
+                    <br> Good luck! /Plantcation Crew
                 </p>
             </div>
         </div>
@@ -219,7 +187,6 @@
                     <input id="first_name" name="first_name" placeholder="Jessica" type="text" required
                         aria-label="first-name">
                     <br>
-
                     <label for="last_name">Last Name:</label><br>
                     <input id="last_name" name="last_name" placeholder="Jameson" type="text" required
                         aria-label="last-name">
@@ -251,7 +218,6 @@
                         <option value="pdrop">pDrop</option>
                         <option value="pstring">pString</option>
                     </select>
-
                     <select id="how-many-1" name="how-many-1" aria-label="ammount-of-products" required>
                         <option value="">0</option>
                         <option value="1">1</option>
@@ -324,8 +290,7 @@
         <div id="section-contact">
             <h3>Contact</h3> E-mail: <a href="mailto:eric.aj.backman@gmail.com" aria-label="email-us">Eric
                 Bäckman</a><br>
-            <p> Telephone: +47 704
-                90 91 21</p> <br>
+            <p> Telephone: +47 704 90 91 21</p> <br>
             <p>Address: Ankarstocksvägen 13 <br> 168 64, Stockholm <br> Sweden</p>
         </div>
         <div id="section-social">
@@ -338,7 +303,6 @@
                     class="fa-brands fa-instagram"></i></a>
         </div>
         <div id="certificates">
-
             <a href="http://jigsaw.w3.org/css-validator/check/referer">
                 <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss"
                     alt="Valid CSS!"></a>
