add 404 page plus increased contrast on text vd background on presentation text and increased weight on h2´s

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <nav>
                 <ul id="navigation-list">
                     <li class="nav-item"><a href="#about">About</a></li>
-                    <li class="nav-item"><a href="#products-grid-container">Products</a></li>
+                    <li class="nav-item"><a href="#quote">Products</a></li>
                     <li class="nav-item"><a href="#top"> Home</a> </li>
                 </ul>
                 <div id="dropdown-menu">
@@ -80,7 +80,9 @@
                 </div>
             </div>
         </div>
+ 
     </section>
+    <section id="quote"><p>Welcome back to a <span class="green-text">GREEN</span> home</p></section>
     <!-- Products -->
     <section id="products-grid-container">
         <div id="arrow-down"> <i class="fa-solid fa-arrow-down-long"> </i></div>
