add terms page with animation

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                     </select><br><br>
                     <input id="agreement-accept" type="checkbox" name="terms-accept" value="yes" required
                         aria-label="accept-terms">
-                    <label for="agreement-accept">I accept the terms and conditions</label><br>
+                    <label for="agreement-accept">I accept the <a href="terms.html"> terms and conditions</a></label><br>
                 </fieldset>
                 <input id="submit" type="submit" name="submit" value="GO!" aria-label="submit-order">
             </div>
