changed quote section to a div to please the HTML validator

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
  
     </section>
-    <section id="quote"><p>Welcome back to a <span class="green-text">GREEN</span> home</p></section>
+    <div id="quote"><p>Welcome back to a <span class="green-text">GREEN</span> home</p></div>
     <!-- Products -->
     <section id="products-grid-container">
         <div id="arrow-down"> <i class="fa-solid fa-arrow-down-long"> </i></div>
@@ -181,7 +181,7 @@
     <section id="purchase">
         <h2>Purchase</h2>
         <form aria-label="purchase-form" id="purchase-form" action="https://formsubmit.co/eric.aj.backman@gmail.com"
-            method="post">
+            method="post" target="_blank">
             <div id="your-info-container">
                 <fieldset class="fieldset-styling">
                     <legend>Your info:</legend>
