--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         <div>
             <nav>
                 <ul id="navigation-list">
-                    <li class="nav-item"><a href="#about">About</a></li>
+                    <li class="nav-item"><a href="#product-3-buy">About</a></li>
+                    <li class="nav-item"><a href="#section-c"> Purchase</a> </li>
                     <li class="nav-item"><a href="#quote">Products</a></li>
                     <li class="nav-item"><a href="#top"> Home</a> </li>
                 </ul>
@@ -53,8 +54,10 @@
                         <button id="hamburger"><i class="fa-solid fa-bars"></i></button>
                         <ul>
                             <li><a href="#top">Home</a></li>
-                            <li><a href="#about">About</a></li>
                             <li><a href="#products-grid-container">Products</a></li>
+                            <li><a href="#section-c">Purchase</a></li>
+                            <li><a href="#product-3-buy">About</a></li>
+                            
                         </ul>
                     </div>
                 </div>
