changed the product link on hamburger to get to the product section better

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <button id="hamburger"><i class="fa-solid fa-bars"></i></button>
                         <ul>
                             <li><a href="#top">Home</a></li>
-                            <li><a href="#products-grid-container">Products</a></li>
+                            <li><a href="#quote">Products</a></li>
                             <li><a href="#section-c">Purchase</a></li>
                             <li><a href="#product-3-buy">About</a></li>
                             
