add quotation mark to main quote

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
                     <div id="owner-picture-container"><img id="plant-guy-image" src="assets/images/plant-guy.webp"
                             alt="happy-man-with-plants">
                     </div>
-                    <h2>I have two passions. <br>
+                    <h2>"I have two passions,<br>
                         <span id="text-yellow-presentation">Plants</span> and <span
-                            id="text-red-presentation">traveling.</span>
+                            id="text-red-presentation">traveling.</span>"
                     </h2>
                     <hr>
                     <p> Keeping my plants alive while im not in my house used to be tricky. Thats why my goal is to make
