compressed and made all pictures except gif into webp to increase performance

--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
     <!-- intro animation -->
     <div id="welcome-animation-container">
         <div id="welcome-animation-upper-left">
-            <img id="upper-left-welcome-slide" src="assets/images/upper-left.png" alt="upper-left-intro-plant">
+            <img id="upper-left-welcome-slide" src="assets/images/upper-left.webp" alt="upper-left-intro-plant">
             <h1>HI</h1>
         </div>
         <div id="welcome-animation-upper-right">
-            <img id="upper-right-welcome-slide" src="assets/images/upper-right.png" alt="upper-right-intro-plant">
+            <img id="upper-right-welcome-slide" src="assets/images/upper-right.webp" alt="upper-right-intro-plant">
             <h1>HEJ</h1>
         </div>
         <div id="welcome-animation-bottom-right">
-            <img id="bottom-right-welcome-slide" src="assets/images/bottom-right.png" alt="bottom-left-intro-plant">
+            <img id="bottom-right-welcome-slide" src="assets/images/bottom-right.webp" alt="bottom-left-intro-plant">
             <h1>BONJOUR</h1>
         </div>
         <div id="welcome-animation-bottom-left">
-            <img id="bottom-left-welcome-slide" src="assets/images/bottom-left.png" alt="bottom-left-intro-plant">
+            <img id="bottom-left-welcome-slide" src="assets/images/bottom-left.webp" alt="bottom-left-intro-plant">
             <h1>HOLA</h1>
         </div>
     </div>
