--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
     <h2>Game Over!</h2>
     <p>You were gone to long and all your plants died<br>
     Try going back to <a id="dead-link" href="https://catbackmancasino.github.io/MS1-ericbackman-plantcation/">PLANTAWAY index</a> and start over!</p>
-    <img src="assets/images/404-plant.jpeg" alt="">
+    <img src="assets/images/404-plant.webp" alt="">
     </div>  
     
 </body>
