made an animation on the quote/showcase section to showcase the content can be changed

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
  
     </section>
-    <div id="quote"><p>Welcome back to a <span class="green-text">GREEN</span> home</p></div>
+    <div id="quote-div"><p id="quote-text">Welcome back to a <span class="green-text">GREEN</span> home</p></div>
     <!-- Products -->
     <section id="products-grid-container">
         <div id="arrow-down"> <i class="fa-solid fa-arrow-down-long"> </i></div>
