products link dead because i added a div to the quote section and changed the ID. solved

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <ul id="navigation-list">
                     <li class="nav-item"><a href="#product-3-buy">About</a></li>
                     <li class="nav-item"><a href="#section-c"> Purchase</a> </li>
-                    <li class="nav-item"><a href="#quote">Products</a></li>
+                    <li class="nav-item"><a href="#quote-div">Products</a></li>
                     <li class="nav-item"><a href="#top"> Home</a> </li>
                 </ul>
                 <div id="dropdown-menu">
@@ -54,7 +54,7 @@
                         <button id="hamburger"><i class="fa-solid fa-bars"></i></button>
                         <ul>
                             <li><a href="#top">Home</a></li>
-                            <li><a href="#quote">Products</a></li>
+                            <li><a href="#quote-div">Products</a></li>
                             <li><a href="#section-c">Purchase</a></li>
                             <li><a href="#product-3-buy">About</a></li>
                             
