changed text under title to  'self watering systems' to make it totaly clear what the site is about. Was 'Watering MAde Easy before that can be confusing

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div id="logo-big">
             <a href="#top">
                 <h1>Plantaway</h1>
-                <p>Watering Made Easy</p>
+                <p>Self Watering Systems</p>
             </a>
         </div>
         <div>
